--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,15 @@
     <version>4.7.6</version>
   </parent>
 
-  <properties>
-    <packaging>jar</packaging>
-    <jdk.version>21</jdk.version>
-    <release.version>21</release.version>
-    <micronaut.version>4.7.6</micronaut.version>
-    <exec.mainClass>com.vargyr.VargyrCliCommand</exec.mainClass>
-  </properties>
+    <properties>
+        <packaging>jar</packaging>
+        <jdk.version>21</jdk.version>
+        <release.version>21</release.version>
+        <micronaut.version>4.7.6</micronaut.version>
+        <exec.mainClass>com.vargyr.VargyrCliCommand</exec.mainClass>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
 
 
   <repositories>
@@ -85,6 +87,12 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
       <scope>runtime</scope>
     </dependency>
 
